src/objects/copado__User_Story__c.object
<CustomObject>
    <fields>
        <fullName>copadoccmint__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoccmint__JIRA_key__c</fullName>
        <label>JIRA key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copadometrics__Business_Disruption_Failure__c</fullName>
        <formula>IF(OR(TEXT(copadometrics__Severity__c) == &apos;P0 - Blocker - Business Disruption&apos;, TEXT(copadometrics__Severity__c) == &apos;P1 - Critical - No Workaround&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Disruption Failure?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copadometrics__Development_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Development Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copadometrics__Elapsed_Time_to_Resolve__c</fullName>
        <formula>TEXT(IF(
ISBLANK(copadometrics__First_Time_Promoted_to_Production__c),
FLOOR(NOW() - CreatedDate)
,
FLOOR(copadometrics__First_Time_Promoted_to_Production__c - CreatedDate)
))

&amp; &quot; days &quot; &amp;

TEXT(IF(
ISBLANK(copadometrics__First_Time_Promoted_to_Production__c),
FLOOR(MOD((NOW() - CreatedDate)*24, 24))
,
FLOOR(MOD((copadometrics__First_Time_Promoted_to_Production__c - CreatedDate)*24, 24))
))
 
&amp; &quot; hours &quot; &amp; 

TEXT(IF(
ISBLANK(copadometrics__First_Time_Promoted_to_Production__c),
ROUND(MOD((NOW() - CreatedDate)*1440, 60), 0)
,
ROUND(MOD((copadometrics__First_Time_Promoted_to_Production__c - CreatedDate)*1440, 60), 0)
)) &amp; &quot; minutes&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time to Resolve</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadometrics__Elapsed_Time_to_Resolve_days__c</fullName>
        <formula>IF(
ISBLANK(copadometrics__First_Time_Promoted_to_Production__c),
FLOOR(NOW() - CreatedDate)
,
FLOOR(copadometrics__First_Time_Promoted_to_Production__c - CreatedDate)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time to Resolve (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadometrics__Elapsed_Time_to_Resolve_hours__c</fullName>
        <formula>IF(
ISBLANK(copadometrics__First_Time_Promoted_to_Production__c),
FLOOR(MOD((NOW() - CreatedDate)*24, 24))
,
FLOOR(MOD((copadometrics__First_Time_Promoted_to_Production__c - CreatedDate)*24, 24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time to Resolve (hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadometrics__Elapsed_Time_to_Resolve_minutes__c</fullName>
        <formula>IF(
ISBLANK(copadometrics__First_Time_Promoted_to_Production__c),
ROUND(MOD((NOW() - CreatedDate)*1440, 60), 0)
,
ROUND(MOD((copadometrics__First_Time_Promoted_to_Production__c - CreatedDate)*1440, 60), 0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time to Resolve (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadometrics__First_Ready_to_Promote_Time__c</fullName>
        <label>First Ready to Promote Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copadometrics__First_Time_Promoted_to_Production__c</fullName>
        <label>First Time Promoted to Production</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copadometrics__Found_in_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Found in Promotion</label>
        <referenceTo>copado__Promotion__c</referenceTo>
        <relationshipLabel>User Stories (Found in Promotion)</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copadometrics__Lead_Time__c</fullName>
        <formula>TEXT(IF(
AND(NOT(ISBLANK(copadometrics__First_Time_Promoted_to_Production__c)), NOT(ISBLANK(copadometrics__First_Ready_to_Promote_Time__c))),
FLOOR(copadometrics__First_Time_Promoted_to_Production__c - copadometrics__First_Ready_to_Promote_Time__c)
,
0)) 
&amp; &quot; days &quot; &amp; 


TEXT(IF(
AND(NOT(ISBLANK(copadometrics__First_Time_Promoted_to_Production__c)), NOT(ISBLANK(copadometrics__First_Ready_to_Promote_Time__c))),
FLOOR(MOD((copadometrics__First_Time_Promoted_to_Production__c - copadometrics__First_Ready_to_Promote_Time__c)*24, 24))
,
0)) &amp; &quot; hours &quot; &amp; 


TEXT(IF(
AND(NOT(ISBLANK(copadometrics__First_Time_Promoted_to_Production__c)), NOT(ISBLANK(copadometrics__First_Ready_to_Promote_Time__c))),
ROUND(MOD((copadometrics__First_Time_Promoted_to_Production__c - copadometrics__First_Ready_to_Promote_Time__c)*1440, 60), 0)
,
0))  &amp; &quot; minutes &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadometrics__Lead_Time_days__c</fullName>
        <formula>IF(
AND(NOT(ISBLANK(copadometrics__First_Time_Promoted_to_Production__c)), NOT(ISBLANK(copadometrics__First_Ready_to_Promote_Time__c))),
FLOOR(copadometrics__First_Time_Promoted_to_Production__c - copadometrics__First_Ready_to_Promote_Time__c)
,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadometrics__Lead_Time_hours__c</fullName>
        <formula>IF(
AND(NOT(ISBLANK(copadometrics__First_Time_Promoted_to_Production__c)), NOT(ISBLANK(copadometrics__First_Ready_to_Promote_Time__c))),
FLOOR(MOD((copadometrics__First_Time_Promoted_to_Production__c - copadometrics__First_Ready_to_Promote_Time__c)*24, 24))
,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time (hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadometrics__Lead_Time_minutes__c</fullName>
        <formula>IF(
AND(NOT(ISBLANK(copadometrics__First_Time_Promoted_to_Production__c)), NOT(ISBLANK(copadometrics__First_Ready_to_Promote_Time__c))),
ROUND(MOD((copadometrics__First_Time_Promoted_to_Production__c - copadometrics__First_Ready_to_Promote_Time__c)*1440, 60), 0)
,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadometrics__Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P0 - Blocker - Business Disruption</fullName>
                </value>
                <value>
                    <fullName>P1 - Critical - No Workaround</fullName>
                </value>
                <value>
                    <fullName>P2 - Major</fullName>
                </value>
                <value>
                    <fullName>P3 - Minor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>User Story</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__User_Story_Title__c</columns>
        <columns>copado__Org_Credential__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Project__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>copado__Metadata_Types_in_Selection__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>copado__Cli_Listview</fullName>
        <columns>NAME</columns>
        <columns>copado__User_Story_Title__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Org_Credential__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>Cli Listview</label>
    </listViews>
    <nameField>
        <displayFormat>US-{0000000}</displayFormat>
        <label>User Story Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <recordTypes>
        <fullName>copado__Bug</fullName>
        <active>true</active>
        <label>Bug</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__Investigation</fullName>
        <active>true</active>
        <label>Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__User_Story</fullName>
        <active>true</active>
        <label>User Story</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>copado__Cancellation_reason_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  TEXT(copado__Status__c)==&quot;Cancelled&quot;,
  ISBLANK(copado__Cancellation_Reason__c)
)</errorConditionFormula>
        <errorDisplayField>copado__Cancellation_Reason__c</errorDisplayField>
        <errorMessage>A cancellation reason must be given.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Promote_User_Story_Apex_validation</fullName>
        <active>false</active>
        <description>If User Story has apex code, validate that the minimum code coverage has been met.</description>
        <errorConditionFormula>AND(
  copado__Has_Apex_Code__c = true,
  OR(  
     AND(
       PRIORVALUE(copado__Promote_Change__c) = false,
        copado__Promote_Change__c = true
     ),
     AND(
      PRIORVALUE(copado__Promote_and_Deploy__c) = false,
       copado__Promote_and_Deploy__c = true
        )
     ),
  OR(
    ISNULL(copado__Apex_Code_Coverage__c),
    ISNULL(copado__Minimum_Apex_Code_Coverage__c),
    copado__Apex_Code_Coverage__c &lt; copado__Minimum_Apex_Code_Coverage__c
  )
)</errorConditionFormula>
        <errorMessage>This User Story does not meet the required Apex coverage threshold to be promoted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Test_scratch_orgs_cannot_be_used_for_dev</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(copado__Org_Credential__r.copado__Org_Type__c) == &apos;Scratch Org - Test only&apos;</errorConditionFormula>
        <errorDisplayField>copado__Org_Credential__c</errorDisplayField>
        <errorMessage>Test scratch orgs cannot be used for developments</errorMessage>
    </validationRules>
</CustomObject>